--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-== Welcome to Rails
+SAFE DRIVING CRM
+
 
 Rails is a web-application framework that includes everything needed to create
 database-backed web applications according to the Model-View-Control pattern.
